# datastar-py

./: pyproject.toml
src/datastar_py/: __init__.py  sse.py
